--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
         </form>
       </div>
     </div>
-  \
+  
+    <script src="/socket.io/socket.io.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
         $(document).ready(() => {
